--- a/infra/grafana/provisioning/datasources/ds.yaml
+++ b/infra/grafana/provisioning/datasources/ds.yaml
@@ -1,14 +1,16 @@
 apiVersion: 1
 datasources:
   - name: CTIC Postgres
+    uid: CTICPG
     type: postgres
     access: proxy
-    isDefault: true
     url: postgres:5432
     user: ctic
-    secureJsonData:
-      password: cticpw
+    database: cticdb
     jsonData:
-      database: cticdb
       sslmode: disable
       postgresVersion: 1500
+      timescaledb: false
+    secureJsonData:
+      password: cticpw
+    isDefault: true
