--- a/infra/.env.example
+++ b/infra/.env.example
@@ -1,25 +1,27 @@
-# --- MISP ---
-MISP_URL=https://host.docker.internal
-MISP_KEY=changeme
-MISP_VERIFY_SSL=false
-MISP_TAGS=
-MISP_SINCE_DAYS=7
+# --- MISP API / Threat Feeds ---
+MISP_URL=https://host.docker.internal            # MISP server address (local or remote)
+MISP_KEY=changeme                               # Your MISP API key – REPLACE for deployment!
+MISP_VERIFY_SSL=false                           # Set true for prod/remote deployments
+MISP_TAGS=                                      # e.g. "threat,incident"
+MISP_SINCE_DAYS=7                               # Pull events from last n days
 
-# --- DB (container-to-container) ---
+# --- Database (container-to-container) ---
 PGHOST=postgres
 PGPORT=5432
 PGDATABASE=cticdb
 PGUSER=ctic
-PGPASSWORD=cticpw
+PGPASSWORD=cticpw                               # Change in production!
 
-# --- ETL loop cadence ---
-ETL_INTERVAL_SEC=300
+# --- ETL Loop Cadence ---
+ETL_INTERVAL_SEC=300                            # Poll/refresh interval in seconds
 
-# --- Wazuh (optional; V3) ---
-WAZUH_URL=
+# --- Wazuh Integration (optional; V3)
+WAZUH_URL=                                      # Wazuh API endpoint
 WAZUH_USER=
 WAZUH_PASS=
-WAZUH_INSECURE=false
+WAZUH_INSECURE=false                            # Set true for local dev/testing ONLY
 WAZUH_QUERY_MINUTES=60
 WAZUH_LIMIT=500
 WAZUH_SRC=wazuh
+
+# Add any other service config as needed
