--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   postgres:
     image: postgres:15.14
@@ -24,11 +23,19 @@ services:
     environment:
       GF_SECURITY_ADMIN_USER: admin
       GF_SECURITY_ADMIN_PASSWORD: admin
+      PGUSER: ctic
+      PGPASSWORD: cticpw
+      PGDATABASE: cticdb
+    env_file:
+      - ./.env
     ports:
       - "3000:3000"
     volumes:
-      - ./grafana/provisioning:/etc/grafana/provisioning
-      - ./grafana/dashboards:/var/lib/grafana/dashboards
+      # Provisioning configs (dash.yml, datasources, etc.)
+      - ./infra/grafana/provisioning:/etc/grafana/provisioning
+      # Dashboard JSONs (ctic-kpi.json, ctic-ioc-event.json, etc.)
+      - ./infra/grafana/provisioning/dashboards:/var/lib/grafana/dashboards
+      # Grafana runtime data and logs
       - grafana_data:/var/lib/grafana
       - grafana_logs:/var/log/grafana
     depends_on:
